name:                chutesandladders
version:             0.1.0.0
synopsis:            ASCII Chutes and Ladders
description:
  .
  An ASCII version of a childhood favorite game.
  .
homepage:            https://github.com/rjregenold/chutes-and-ladders
license:             MIT
license-file:        LICENSE
author:              RJ Regenold
maintainer:          rjregenold@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable chutes
  main-is:          Main.hs
  build-depends:    base == 4.5.*,
                    split == 0.1.4.3,
                    boxes == 0.1.2,
                    random == 1.0.1.1,
                    text == 0.11.2.2
